# dynasm-jit-demo

./: README.md  meson.build
dynasm/: dasm_x86.h  dasm_x86.lua  dynasm.lua
src/: demo.c  demo1.c
